--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ function login() {
   resultDiv.innerHTML = `
     <div class="token-box">
       Login Berhasil!<br><br>
-      Token Anda:<br>${siswa.token}
+      Password Anda:<br>${siswa.token}
     </div>
   `;
 }
