--- a/index.html
+++ b/index.html
@@ -158,11 +158,21 @@ resultDiv.innerHTML = `
     Token Anda:<br>${siswa.token}
   </div>
 
-  <a href="https://presenter.jivrus.com/p/1RYhC6iZvrvwCSDpSgpUBGpvScWc2HQKASFz5reVK7yU" target="_blank">
-    <button style="margin-top:15px;">
-      Lanjut ke Soal Al Islam
-    </button>
-  </a>
+  <div style="margin-top:15px; display:flex; flex-direction:column; gap:10px;">
+
+    <a href="https://presenter.jivrus.com/p/1RYhC6iZvrvwCSDpSgpUBGpvScWc2HQKASFz5reVK7yU" target="_blank">
+      <button style="width:100%;">
+        Lanjut ke Ke Soal Al Islam
+      </button>
+    </a>
+
+    <a href="https://forms.gle/FORMKEDUA" target="_blank">
+      <button style="width:100%; background:#2196F3;">
+        Lanjut ke Google Form 2
+      </button>
+    </a>
+
+  </div>
 `;
 }
 
