--- a/index.html
+++ b/index.html
@@ -154,8 +154,13 @@ function login() {
 
 resultDiv.innerHTML = `
   <div class="token-box">
-    Login Berhasil!<br><br>
-    Token Anda:<br>${siswa.token}
+    <strong>Login Berhasil!</strong><br><br>
+    <strong>Token Anda:</strong><br>
+    ${siswa.token}
+    <br><br>
+    <small style="color:#555;">
+      Token digunakan untuk mengerjakan soal, silahkan di ingat ingat!!
+    </small>
   </div>
 
   <div style="margin-top:15px; display:flex; flex-direction:column; gap:10px;">
