--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ button:hover {
 
 const dataSiswa = [
 
-{namaPen:"Aditya",password:"12345",token:"Aditya-8kL2"},
+{namaPen:"Aditya",password:"12345",token:"Mohon Maaf, silahkan hubungi bagian Administrasi"},
 {namaPen:"Agung",password:"12345",token:"Agung-X7mN"},
 {namaPen:"Alif",password:"12345",token:"Alif-p5Rs"},
 {namaPen:"Ananda",password:"12345",token:"Ananda-A9tV"},
