--- a/index.html
+++ b/index.html
@@ -99,7 +99,10 @@ button:hover {
 
   <div id="tombolSoal" class="hidden">
     <a href="https://forms.gle/ISI_LINK_FORM_ANDA" target="_blank">
-      <button>Lanjut ke Soal</button>
+      <button>Lanjut ke Soal 1</button>
+
+    <a href="https://forms.gle/ISI_LINK_FORM_ANDA" target="_blank">
+      <button>Lanjut ke Soal 2</button>
     </a>
   </div>
 </div>
