--- a/index.html
+++ b/index.html
@@ -111,45 +111,80 @@ button:hover {
 const dataSiswa = [
 
 {namaPen:"Aditya",password:"12345",token:"Mohon Maaf, silahkan hubungi bagian Administrasi"},
-{namaPen:"Agung",password:"12345",token:"Agung-X7mN"},
-{namaPen:"Alif",password:"12345",token:"Alif-p5Rs"},
+{namaPen:"Agung",password:"12345",token:"Mohon Maaf, silahkan hubungi bagian Administrasi"},
+{namaPen:"Alif",password:"12345",token:"Mohon Maaf, silahkan hubungi bagian Administrasi"},
 {namaPen:"Ananda",password:"12345",token:"Ananda-A9tV"},
-{namaPen:"Asendy",password:"12345",token:"Asendy-f3Wj"},
-{namaPen:"Bagus",password:"12345",token:"Bagus-b7Yx"},
+{namaPen:"Asendy",password:"12345",token:"Mohon Maaf, silahkan hubungi bagian Administrasi"},
+{namaPen:"Bagus",password:"12345",token:"Mohon Maaf, silahkan hubungi bagian Administrasi"},
 {namaPen:"Evan",password:"12345",token:"Evan-H1vP"},
-{namaPen:"Febrian",password:"12345",token:"Febrian-q6Nf"},
-{namaPen:"Galih",password:"12345",token:"Galih-3mDr"},
+{namaPen:"Febrian",password:"12345",token:"Mohon Maaf, silahkan hubungi bagian Administrasi"},
+{namaPen:"Galih",password:"12345",token:"Mohon Maaf, silahkan hubungi bagian Administrasi"},
 {namaPen:"Iqbal",password:"12345",token:"Iqbal-K5sT"},
-{namaPen:"Kevin",password:"12345",token:"Kevin-r8Bc"},
-{namaPen:"Khoerum",password:"12345",token:"Khoerum-W2zP"},
+{namaPen:"Kevin",password:"12345",token:"Mohon Maaf, silahkan hubungi bagian Administrasi"},
+{namaPen:"Khoerum",password:"12345",token:"Mohon Maaf, silahkan hubungi bagian Administrasi"},
 {namaPen:"Kurniawan",password:"12345",token:"Kurniawan-g4Hq"},
 {namaPen:"M.Faiz",password:"12345",token:"M.Faiz-7yRm"},
-{namaPen:"Maulana",password:"12345",token:"Maulana-N1xV"},
+{namaPen:"Maulana",password:"12345",token:"Mohon Maaf, silahkan hubungi bagian Administrasi"},
 {namaPen:"Muhamad",password:"12345",token:"Muhamad-mR9v"},
-{namaPen:"Muhammadaldhi",password:"12345",token:"Muhammad-4tBw"},
-{namaPen:"Muhammadathar",password:"12345",token:"Muhammad-Y1zD"},
-{namaPen:"Muhammadfais",password:"12345",token:"Muhammad-6jKq"},
-{namaPen:"Muhammadhilal",password:"12345",token:"Muhammad-P8nL"},
-{namaPen:"Muhammadlucky",password:"12345",token:"Muhammad-u2Gh"},
+{namaPen:"Muhammadaldhi",password:"12345",token:"Mohon Maaf, silahkan hubungi bagian Administrasi"},
+{namaPen:"Muhammadathar",password:"12345",token:"Mohon Maaf, silahkan hubungi bagian Administrasi"},
+{namaPen:"Muhammadfais",password:"12345",token:"Mohon Maaf, silahkan hubungi bagian Administrasi"},
+{namaPen:"Muhammadhilal",password:"12345",token:"Mohon Maaf, silahkan hubungi bagian Administrasi"},
+{namaPen:"Muhammadlucky",password:"12345",token:"Mohon Maaf, silahkan hubungi bagian Administrasi"},
 {namaPen:"Muhammadvarel",password:"12345",token:"Muhammad-5eRm"},
 {namaPen:"Noval",password:"12345",token:"Noval-9kXc"},
-{namaPen:"Nuven",password:"12345",token:"Nuven-w4Ty"},
+{namaPen:"Nuven",password:"12345",token:"Mohon Maaf, silahkan hubungi bagian Administrasi"},
 {namaPen:"Pandu",password:"12345",token:"Pandu-z1Vp"},
-{namaPen:"Pujo",password:"12345",token:"Pujo-7xMn"},
-{namaPen:"Riyan",password:"12345",token:"Riyan-L9fS"},
-{namaPen:"Viko",password:"12345",token:"Viko-v3Kt"},
-{namaPen:"Adityafirman",password:"12345",token:"Aditya-B5dH"},
-{namaPen:"Adityaveno",password:"12345",token:"Aditya-t8Wj"},
+{namaPen:"Pujo",password:"12345",token:"Mohon Maaf, silahkan hubungi bagian Administrasi"},
+{namaPen:"Riyan",password:"12345",token:"Mohon Maaf, silahkan hubungi bagian Administrasi"},
+{namaPen:"Viko",password:"12345",token:"Mohon Maaf, silahkan hubungi bagian Administrasi"},
+{namaPen:"Adityafirman",password:"12345",token:"Mohon Maaf, silahkan hubungi bagian Administrasi"},
+{namaPen:"Adityaveno",password:"12345",token:"Mohon Maaf, silahkan hubungi bagian Administrasi"},
 {namaPen:"Akhadian",password:"12345",token:"Akhadian-3jPq"},
 {namaPen:"Ali",password:"12345",token:"Ali-G6yK"},
 {namaPen:"Alvin",password:"12345",token:"Alvin-fM0t"},
 {namaPen:"Arvian",password:"12345",token:"Arvian-2vBc"},
 {namaPen:"Bayu",password:"12345",token:"Bayu-X9zR"},
-{namaPen:"Bayu",password:"12345",token:"Bayu-x6Nv"},
+{namaPen:"Denis",password:"12345",token:"Denis-5sWk"},
+{namaPen:"Dwi",password:"12345",token:"Mohon Maaf, silahkan hubungi bagian Administrasi"},
+{namaPen:"Fahrul",password:"12345",token:"Fahrul-Q7pB"},
+{namaPen:"Farel",password:"12345",token:"Farel-8nJh"},
+{namaPen:"Firza",password:"12345",token:"Mohon Maaf, silahkan hubungi bagian Administrasi"},
+{namaPen:"Gading",password:"12345",token:"Gading-6hNj"},
+{namaPen:"Galeh",password:"12345",token:"Mohon Maaf, silahkan hubungi bagian Administrasi"},
+{namaPen:"Muhamadafrizal",password:"12345",token:"Mohon Maaf, silahkan hubungi bagian Administrasi"},
+{namaPen:"Muhamadrapa",password:"12345",token:"Muhamad-x7Tm"},
+{namaPen:"Muhammadafiqudin",password:"12345",token:"Mohon Maaf, silahkan hubungi bagian Administrasi"},
+{namaPen:"Muhammadmuzaki",password:"12345",token:"Mohon Maaf, silahkan hubungi bagian Administrasi"},
+{namaPen:"Naufal",password:"12345",token:"Mohon Maaf, silahkan hubungi bagian Administrasi"},
+{namaPen:"Pramudya",password:"12345",token:"Mohon Maaf, silahkan hubungi bagian Administrasi"},
+{namaPen:"Ramadhani",password:"12345",token:"Mohon Maaf, silahkan hubungi bagian Administrasi"},
+{namaPen:"Wilsen",password:"12345",token:"Wilsen-C0tF"},
+{namaPen:"Zaenal",password:"12345",token:"Zaenal-B7yG"},
+{namaPen:"BayuLak",password:"12345",token:"Mohon Maaf, silahkan hubungi bagian Administrasi"},
 {namaPen:"Akbar",password:"12345",token:"Akbar-S3mK"},
 {namaPen:"Aldira",password:"12345",token:"Aldira-t9Rc"},
-{namaPen:"Alya",password:"12345",token:"Alya-P4qD"},
+{namaPen:"Alya",password:"12345",token:"Mohon Maaf, silahkan hubungi bagian Administrasi"},
 {namaPen:"Aziz",password:"12345",token:"Aziz-k8Xm"},
+{namaPen:"Banyu",password:"12345",token:"Mohon Maaf, silahkan hubungi bagian Administrasi"},
+{namaPen:"Dika",password:"12345",token:"Mohon Maaf, silahkan hubungi bagian Administrasi"},
+{namaPen:"Dinda",password:"12345",token:"Mohon Maaf, silahkan hubungi bagian Administrasi"},
+{namaPen:"Fina",password:"12345",token:"Mohon Maaf, silahkan hubungi bagian Administrasi"},
+{namaPen:"Laela",password:"12345",token:"Laela-Qc4L"},
+{namaPen:"Lailatul",password:"12345",token:"Lailatul-8uXg"},
+{namaPen:"Lusiana",password:"12345",token:"Mohon Maaf, silahkan hubungi bagian Administrasi"},
+{namaPen:"Nok",password:"12345",token:"Mohon Maaf, silahkan hubungi bagian Administrasi"},
+{namaPen:"Olivia",password:"12345",token:"Olivia-z9Pb"},
+{namaPen:"Prajna",password:"12345",token:"Mohon Maaf, silahkan hubungi bagian Administrasi"},
+{namaPen:"Putri",password:"12345",token:"Putri-G1hL"},
+{namaPen:"Qonita",password:"12345",token:"Qonita-f0Ys"},
+{namaPen:"Raffi",password:"12345",token:"Mohon Maaf, silahkan hubungi bagian Administrasi"},
+{namaPen:"Rangga",password:"12345",token:"Rangga-H2bZ"},
+{namaPen:"Rina",password:"12345",token:"Mohon Maaf, silahkan hubungi bagian Administrasi"},
+{namaPen:"Risma",password:"12345",token:"Mohon Maaf, silahkan hubungi bagian Administrasi"},
+{namaPen:"Shabira",password:"12345",token:"Mohon Maaf, silahkan hubungi bagian Administrasi"},
+{namaPen:"Siti",password:"12345",token:"Mohon Maaf, silahkan hubungi bagian Administrasi"},
+{namaPen:"Tri",password:"12345",token:"Mohon Maaf, silahkan hubungi bagian Administrasi"},
 {namaPen:"Tsabut",password:"12345",token:"Tsabut-4mPw"}
 ];
 
