--- a/index.html
+++ b/index.html
@@ -98,10 +98,10 @@ button:hover {
   <div id="result"></div>
 
   <div id="tombolSoal" class="hidden">
-    <a href="https://forms.gle/ISI_LINK_FORM_ANDA" target="_blank">
+    <a href="Soal Belum Tersedia" target="_blank">
       <button>Lanjut ke Soal 1</button>
 
-    <a href="https://forms.gle/ISI_LINK_FORM_ANDA" target="_blank">
+    <a href="Soal Belum Tersedia" target="_blank">
       <button>Lanjut ke Soal 2</button>
     </a>
   </div>
