--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ button:hover {
   <div id="result"></div>
 
   <div id="tombolSoal" class="hidden">
-    <a href="Soal Belum Tersedia" target="_blank">
+    <a href="https://presenter.jivrus.com/p/1RYhC6iZvrvwCSDpSgpUBGpvScWc2HQKASFz5reVK7yU" target="_blank">
       <button>Lanjut ke Soal 1</button>
 
     <a href="Soal Belum Tersedia" target="_blank">
