--- a/index.html
+++ b/index.html
@@ -99,10 +99,10 @@ button:hover {
 
   <div id="tombolSoal" class="hidden">
     <a href="https://presenter.jivrus.com/p/1RYhC6iZvrvwCSDpSgpUBGpvScWc2HQKASFz5reVK7yU" target="_blank">
-      <button>Lanjut ke Soal 1</button>
+      <button>Al Islam</button>
 
-    <a href="Soal Belum Tersedia" target="_blank">
-      <button>Lanjut ke Soal 2</button>
+    <a href="https://presenter.jivrus.com/p/1vvNRIXvpfjicuSXiu35cLIdHqi3uikn1WRK-KJ-CQUo" target="_blank">
+      <button>Kemuhammadiyahan</button>
     </a>
   </div>
 </div>
